force-app/main/default/objects/Reports_History_Tracking__c/Reports_History_Tracking__c.object-meta.xml
<CustomObject>
    <label>Reports History Tracking</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Reports History Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reports History Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>