force-app/main/default/objects/Reports_History_Tracking__c/fields/JSON1__c.field-meta.xml
<CustomField>
    <fullName>JSON1__c</fullName>
    <description>Field to Reports History in JSON Format.</description>
    <label>JSON1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>