force-app/main/default/objects/Reports_History_Tracking__c/fields/JSON2__c.field-meta.xml
<CustomField>
    <fullName>JSON2__c</fullName>
    <label>JSON2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>