force-app/main/default/objects/Reports_History_Tracking__c/fields/JSON4__c.field-meta.xml
<CustomField>
    <fullName>JSON4__c</fullName>
    <label>JSON4</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>